@@ -1,2 +1,6 @@
 # U_Pass
-just a project
+Acesta e codul sursa.
+Inca nu a fost impachetat intrun executabil, deci trebuie rulat manual.
+Pentru inceput este nevoie de libraria JavaFX -> https://gluonhq.com/products/javafx/
+La rulare este nevoie de niste argumente speciale pentru JavaVM -> 
+java --module-path "[filepath to javafx-sdk/lib]" --add-modules javafx.controls,javafx.fxml -jar ProiectPi.jar
